--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,14 @@
     <string name="close">Close</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="regular">Regular</string>
+    <string name="premium">Premium</string>
+    <string name="express">Express</string>
+    <string name="regular_delivery">Regular Delivery</string>
+    <string name="premium_delivery">Premium Delivery</string>
+    <string name="express_delivery">Express Delivery</string>
+    <string name="regular_delivery_time">2 days</string>
+    <string name="premium_delivery_time">1 day</string>
+    <string name="express_delivery_time">12 Hours</string>
+    <string name="delivery_time_not_selected">Delivery Time: Not Selected</string>
 </resources>
